# femlib

./: .gitignore  CMakeLists.txt  config.h.in
headers/: auxiliary_functions.h  config.h  csr_pattern.h  dof_handler.h  edge.h  fine_mesh.h  finite_element.h  function.h  line.h  math_functions.h  matrix.h  mesh_element.h  parameters.h  point.h  quadrangle.h  rectangle.h  result.h  solver.h  sparse_matrix.h  sym_csr_pattern.h  triangle.h  vector.h
sources/: auxiliary_functions.cpp  csr_pattern.cpp  dof_handler.cpp  edge.cpp  fine_mesh.cpp  finite_element.cpp  function.cpp  line.cpp  math_functions.cpp  matrix.cpp  mesh_element.cpp  parameters.cpp  point.cpp  quadrangle.cpp  rectangle.cpp  result.cpp  solver.cpp  sym_csr_pattern.cpp  triangle.cpp  vector.cpp
